# spasm

./: .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  Findargp.cmake  Makefile  Makefile.am  README  README.md  TODO  configure.ac
bench/: .gitignore  Makefile.am  bitmap.c  blocks.c  blocks_rank.c  blocks_schur  blocks_schur.c  cado_pivots.c  chains.c  demo_cheap.c  dm.c  dm_rank.c  echelonize.c  ffpack_narrow.cpp  ffpack_rank.cpp  find_pivots.c  gbla_list.txt  get_gbla.sh  get_matrices.sh  kernel.c  lemon.cpp  linbox_rank_gauss.cpp  linbox_rank_wm.cpp  matching_pivots.c  matrix_list.txt  maximum_matching.c  metis.c  modules.nw  mtx_reader.c  narrow.c  pbm.c  permute.c  pgm.c  pluq.c  pluq_recursive.c  ppm.c  rank.c  rank_dense.c  rank_gplu.c  rank_hybrid.c  (+17 more)
bench/tamu/: SuiteSparseMatrixCollection.html  process.py
bench/topo/: benchmark.ods
doc/: prototype.sage  support.tex
m4/: givaro-check.m4  linbox-check.m4  numa-check.m4
result/: benchmark-gauss.ods  gbla_result.txt  left_vs_right.ods  matrices_linbox_gauss_is_faster_than_spasm.txt  matrices_spasm_is_faster_than_linbox_gauss.txt  nrow_greater_than_ncols_transpose.txt  parse.py  sort_cheap.txt  targets.ods
src/: CMakeLists.txt  LUstats.c  Makefile.am  mmio.c  mmio.h  sha256.c  sha256.h  spasm.h  spasm_GFp.c  spasm_ZZp.c  spasm_cc.c  spasm_certificate.c  spasm_column.c  spasm_concatenate.c  spasm_csr.c  spasm_dense_lu.c  spasm_dm.c  spasm_echelonize.c  spasm_ffpack.cpp  spasm_gaxpy.c  spasm_gplu.c  spasm_inverse.c  spasm_io.c  spasm_kernel.c  spasm_lazy.c  spasm_lu.c  spasm_matching.c  spasm_permutation.c  spasm_pivots.c  spasm_prng.c  spasm_reach.c  spasm_rref.c  spasm_scatter.c  spasm_scc.c  spasm_schur.c  spasm_solutions.c  spasm_solve.c  spasm_sort.c  spasm_spmv.c  spasm_submatrix.c  (+7 more)
test/: .gitignore  GFp.c  Makefile.am  cc.c  column_slices.c  dense_lsolve.c  dense_lu.c  dense_solve.c  dense_usolve.c  dm.c  gaxpy.c  inverse.sh  inverse_and_prod.c  io.c  kernel.c  lsolve.c  lu.c  lu_find_pivot.c  lu_out  lu_solve.c  mat_perm.c  permuted_lu.c  permuted_pluq.c  pluq.c  pluq_solve.c  reach.c  row_concatenation.c  scc.c  schur.c  solve.c  sort.c  sorted_submatrix.c  sparse_lsolve.c  sparse_lsolve_big.c  sparse_permuted_lsolve.c  sparse_solve.c  sparse_usolve.c  sparse_utsolve.c  spsolve.c  super_find_pivot.c  (+24 more)
test/Expected/: gaxpy.1  io.2
test/Matrix/: D8  exple_ur.sms  exple_ur2.sms  g1  l1  lower_trapeze  m1  medium  rectangular_h  rectangular_l  singular  small  t1  trefethen.2000  trefethen.500  u1  upper_trapeze
test/scripts/: tridiagonal.sage  upper_lower.sage
tests/: CMakeLists.txt  GFp.c  cc.c  column_slices.c  dense_lsolve.c  dense_lu.c  dense_lu_ffpack.c  dense_rref_ffpack.c  dense_usolve.c  dm.c  echelonize.c  gaxpy.c  gesv.c  kernel.c  lu.c  lu_solve.c  mat_perm.c  matching.c  permuted_lu.c  permuted_pluq.c  pluq.c  pluq_solve.c  prng.c  rank_cert.c  rowspan_cert.c  scc.c  schur.c  schur_dense.c  sha.c  solve.c  sparse_lsolve.c  sparse_lsolve_big.c  sparse_lu_usolve.c  sparse_permuted_lsolve.c  sparse_usolve.c  sparse_utsolve.c  sparse_vect_matrix_prod.c  spmv.c  submatrix.c  test_tools.c  (+4 more)
tests/Expected/: gaxpy.1  hash  prng
tests/Matrix/: trefethen_500.sms
tools/: CMakeLists.txt  bitmap.c  check_cert.c  common.c  common.h  dm.c  echelonize.c  find_pivots.c  kernel.c  mtx_reader.c  rank.c  solve.c  stack.c  transpose.c  vertical_swap.c
